# eww-scripts

./: .gitignore  Cargo.toml  README.md  flake.nix
eww-launch/: Cargo.toml
eww-launch/src/: main.rs
hyprland-current-window-title/: Cargo.toml
hyprland-current-window-title/src/: main.rs
hyprland-workspaces/: Cargo.toml
hyprland-workspaces/src/: main.rs
src/: eww-launch.rs  eww_launch.rs  hyprland-current-window-title.rs  hyprland-workspaces.rs  hyprland_window_title.rs  hyprland_workspaces.rs  main.rs
