[package]
name = "eww-scripts-flake"
version = "0.1.0"
edition = "2021"

[dependencies]
# once this is no longer in alpha, a different version should be specified
hyprland = { version = "=0.4.0-alpha.2", features = ["silent"] }

[[bin]]
name = "eww-launch"
path = "src/eww-launch.rs"

[[bin]]
name = "hyprland-current-window-title"
path = "src/hyprland-current-window-title.rs"

[[bin]]
name = "hyprland-workspaces"
path = "src/hyprland-workspaces.rs"
